fixed authentication issues and added required auth config step in readme

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=QaylTech
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -36,6 +36,9 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
+SUPER_ADMIN_EMAIL=""
+SUPER_ADMIN_PASS=""
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
