--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/helpers": "^1.5",
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
